# prov

./: Cargo.toml  README.md  flake.nix
colophon/: Cargo.toml
colophon-cli/: Cargo.toml
colophon-cli/src/: cli.rs  main.rs
colophon/src/: attach.rs  change.rs  config.rs  document.rs  edit.rs  fs.rs  identity.rs  index.rs  intake.rs  journal.rs  lib.rs  link.rs  mutate.rs  route.rs  tree.rs  validate.rs  workspace.rs
docs/: DESIGN.md  config-vocab.md  getting-started.md  init-adoption.md  next-steps.md  reference-styles.md
prov/: Cargo.toml
prov-cli/src/: cli.rs  init.rs  main.rs
prov-cli/tests/: output_streams.rs  root_flag.rs
prov/src/: attach.rs  discovery.rs  document.rs  intake.rs  journal.rs  mutate.rs
