[workspace]
resolver = "2"
members = ["colophon", "colophon-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/adammharris/colophon"
homepage = "https://github.com/adammharris/colophon"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Embedded-metadata backend. fig is a Zig-backed parser/editor (its build.rs
# runs `zig build`). The value tree is colophon's common currency.
#
# Only the format-agnostic infrastructure is enabled here (serde/derive/indexmap).
# The per-format parser backends (yaml/json/fig) are pulled in *by colophon's own
# features* — see `colophon/Cargo.toml` `[features]`, which forwards `yaml` →
# `fig/yaml`, etc. This lets a downstream user compile out the formats they don't
# use (each unused format is a Zig parser/printer left out of `libfig.a`).
fig = { version = "2.5.0", default-features = false, features = ["serde", "derive", "indexmap"] }
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "2.0"

# Body-prose parsing (Djot/Markdown) — colophon's body-parser dependency (see
# `src/content.rs`). Published on crates.io as `twig-doc`; imported under the
# `twig` name via `package`. Pinned to 1.0.0. Zig-backed like `fig`, same build
# shape (its build.rs runs `zig build`).
twig = { package = "twig-doc", version = "1.0.0" }

# Opaque document-ID minting: betanumeric alphabet + NOID-style check character
# over a seeded PRNG. Colophon supplies its own seed (uniqueness is enforced by
# rejection against the index, not entropy), so the dependency-free default —
# no `os`/`js` features — is all it needs. See `colophon/src/identity.rs`.
moid = "0.1.0"

# Internal crate.
colophon = { path = "colophon", version = "0.1.0" }