[package]
name = "colophon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "A self-describing plaintext workspace: structure lives in documents' own embedded metadata."
keywords = ["markdown", "frontmatter", "workspace", "knowledge-base"]
categories = ["text-processing", "filesystem"]
publish = true

[dependencies]
# Embedded-metadata backend. fig is a Zig-backed parser/editor (its build.rs
# runs `zig build`). The value tree is colophon's common currency. Which format
# backends fig compiles in is governed by colophon's features below.
fig.workspace = true
indexmap.workspace = true
thiserror.workspace = true

# Opaque document-ID minting (alphabet + check character + seeded PRNG). See
# `src/identity.rs`; the policy layer around it stays colophon's own.
moid.workspace = true

# Body-prose parsing (Djot/Markdown) — see `src/content.rs`. Zig-backed (its
# build.rs runs `zig build`, same shape as `fig`), so building colophon needs
# the Zig toolchain. A required dependency: body rendering and code-aware
# link scanning are always available, not gated behind a feature.
twig-doc.workspace = true

[features]
# YAML is the conventional default (`---` frontmatter, `registry.yaml`). Turn it
# off with `default-features = false` and select another format to slim the build.
default = ["yaml"]

# Each feature forwards to the matching `fig` parser/printer backend. With a
# format off, its Zig parser is left out of `libfig.a` *and* colophon stops
# recognizing that format (see `whole_file_format`). At least one must be on —
# `lib.rs` enforces this with a `compile_error!`.
yaml = ["fig/yaml"]
json = ["fig/json"]
toml = ["fig/toml"]
# `fig` is the dependency name, so the native-dialect feature is spelled
# `fig-lang` (a feature and a dependency may not share a name unambiguously).
fig-lang = ["fig/fig"]
